Allow use of host names without any dot.

* In the case where DNS isn't working we calculate the computer name
   from the host name. Allow that name to have no dots.

https://bugs.freedesktop.org/show_bug.cgi?id=56147