library/adenroll.c
@@ -123,15 +123,20 @@ ensure_computer_name (adcli_result res,
 	/* Use the FQDN minus the last part */
 	dom = strchr (enroll->host_fqdn, '.');
 
-	/* If no dot, or dot is first or last, then fail */
-	if (dom == NULL || dom == enroll->host_fqdn || dom[1] == '\0') {
+	/* If dot is first then fail */
+	if (dom == enroll->host_fqdn) {
 		_adcli_err (enroll->conn, "Couldn't determine the computer account name from host name: %s",
 		            enroll->host_fqdn);
 		return ADCLI_ERR_CONFIG;
-	}
 
-	enroll->computer_name = strndup (enroll->host_fqdn, dom - enroll->host_fqdn);
-	return_unexpected_if_fail (enroll->computer_name != NULL);
+	} else if (dom == NULL) {
+		enroll->computer_name = strdup (enroll->host_fqdn);
+		return_unexpected_if_fail (enroll->computer_name != NULL);
+
+	} else {
+		enroll->computer_name = strndup (enroll->host_fqdn, dom - enroll->host_fqdn);
+		return_unexpected_if_fail (enroll->computer_name != NULL);
+	}
 
 	_adcli_str_up (enroll->computer_name);
 
